# BEP-3D-scanner

./: .gitignore  Dockerfile  README.md  images.txt  pyproject.toml  reconstruction.py  requirements.txt  run_scanner.ps1  watcher.py
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
Arduino/: arduino.cc  arduino_main.py  coordinates_example_5.csv  test_arduino.py
colmap/: performance.py  reconstruct.py  surface_reconstruction.py
colmap/colmap_utils/: colmap_utils.py
colmap_tests/: camera_models.json  reconstruct.py  test1.py
computer_vision_examples/scripts/: feature_matching_example.py  measuring_shapes.py  measuring_shapes_real_pear.py  sparse_scene_colmap.py
datasets/machine4/known_parameters/: cameras.txt
datasets/machine5/colmap_parameters/: cameras.txt  images.txt  points3D.txt
datasets/machine5/known_parameters/: cameras.txt  (+1 more)
datasets/pear_donout/: sfs_reconstruction_machine4.ply  sfs_reconstruction_machine4_no_doughnut.ply  sfs_reconstruction_machine4_surface.ply  sfs_reconstruction_machine5.ply  sfs_reconstruction_surface_machine5.ply
dynamixel_motor_control/src/: dynamixel_motor.py  keyboard_control.py
mechatronics/: camera.py  test.py
shape_from_motion/: reconstruct.py
shape_from_silhouettes/: create_silhouettes.py  quaternion_plotter.py  shape_from_silhouettes.py
shape_from_silhouettes/sfs_utils/: create_known_parameters.py
utils/: create_images_txt.py  create_known_parameters.py  crop_images.py  edit_image_file.py  image_conversion.py  spherical_to_quaternion.py  strip_image_file.py  surface_reconstruction.py
(+2 files in other folders)
