[project]
name = "bep-3d-scanner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "dynamixel-sdk>=3.7.31",
    "enlighten>=1.14.1",
    "getch>=1.0",
    "matplotlib>=3.7.5",
    "opencv-python>=4.11.0.86",
    "pycolmap>=3.11.1",
    "pyqt5>=5.15.11",
]
